# hzb-bii-emcgw

./: .gitignore  EMC.html  LICENSE  README.md  config.yaml  config2.yaml  emcgw.yaml  emcgwapp  forwarder.py  forwarder2.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
examples/: .README
scripts/: bootstrap.sh
src/: .README
src/emcgw/: __init__.py  app.py  connection_handler.py  logger.py  server.py
tests/: .README
