[project]
name = "pyemcgw"
dynamic = ["version"]
authors = [
  { name="Ruslan Ovsyannikov" },
  { name="Ruslan Ovsyannikov", email="ruslan.ovsyannikov@helmholtz-berlin.de" },
]
description = "Monochromator AMC/EMC gateway"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]

dependencies = [
            'pyyaml',  # Add pyyaml to the list of dependencies
          ]

[build-system]
requires = [ "setuptools>=41", "wheel", "setuptools-git-versioning<2", ]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true

[project.scripts]
emcgw = "emcgw.app:main"

[project.urls]
#Homepage = "https://gitlab.helmholtz-berlin.de/ubjlcontrols/common/py-aaret"
#Source = "https://gitlab.helmholtz-berlin.de/ubjlcontrols/common/py-aaret"
#"Bug Tracker" = "https://gitlab.helmholtz-berlin.de/ubjlcontrols/common/py-aaret/-/issues"
#"wiki" = "https://gitlab.helmholtz-berlin.de/ubjlcontrols/common/py-aaret/-/wikis"
